--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -27,6 +27,8 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
   deploy:
+    permissions:
+      idToken: read
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
