--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -26,9 +26,13 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: $GITHUB_WORKSPACE/dist
   deploy:
     permissions:
       id-token: write
+      pages: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
